--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
   padding: 10px auto;
   font-size: 32px;
   font-weight: 700;
-  color: #4b52b6;
+  color: #850a41;
   background-color: #fff;
   transition: 1s;
 }
