--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   position: relative;
   min-height: 100vh;
   padding-bottom: 80px;
-  border-bottom: 3px solid rgba(250, 250, 250, 0.25);
+  border-bottom: 3px solid rgba(10, 10, 10, 0.25);
 }
 
 .section-heading {
@@ -62,7 +62,7 @@ button {
   padding: 10px 20px;
   margin: 0px 5px;
   background-color: #fff;
-  color: #1c5c57;
+  color: #0a4d72;
   font-size: 12px;
   font-weight: 800;
   letter-spacing: 0.5px;
